--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,47 +6,22 @@
     android:layout_height="match_parent"
     tools:context="etchee.com.weightlifty.MainActivity">
 
-    <Button
-        android:id="@+id/view_tables_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/view_tables"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="230dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:id="@+id/insert_dummy_data"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/insert_dummy_data"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
+    <!--Button to begin workout-->
     <Button
         android:id="@+id/begin_workout_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/begin_workout"
-        android:layout_above="@+id/plan_workout"
-        android:layout_marginBottom="27dp"
+        android:layout_alignEnd="@+id/imageView"
         android:layout_alignLeft="@+id/imageView"
-        android:layout_alignStart="@+id/imageView"
         android:layout_alignRight="@+id/imageView"
-        android:layout_alignEnd="@+id/imageView" />
+        android:layout_alignStart="@+id/imageView"
+        android:layout_below="@+id/imageView"
+        android:layout_marginTop="37dp"
+        android:paddingBottom="20dp"
+        android:paddingTop="20dp"
+        android:text="@string/begin_workout" />
 
-    <Button
-        android:id="@+id/plan_workout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/plan_workout"
-        android:layout_above="@+id/insert_dummy_data"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="156dp" />
-
+    <!--ImageView to hold the pretty icon for the app-->
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="200dp"
@@ -55,5 +30,81 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="39dp" />
+
+    <Button
+        android:id="@+id/plan_workout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/begin_workout_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="48dp"
+        android:text="@string/plan_workout" />
+
+    <TextView
+        android:id="@+id/dev_options_hint_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/horizontalScrollView"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="sans-serif-smallcaps"
+        android:text="@string/developer_options"
+        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+        android:textSize="14sp" />
+
+
+    <!--Horizontally scroll down below to make use of the dev options-->
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/horizontalScrollView">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/button_delete_dummy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/delete_dummy_data"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <Button
+                android:id="@+id/insert_dummy_calendar_data"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/insert_dummy_calendar_data"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+
+
+            <Button
+                android:id="@+id/view_tables_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/view_tables"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button_insert_dummy_eventType"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:text="@string/insert_dummy_eventtype_data"
+                />
+        </LinearLayout>
+
+    </HorizontalScrollView>
+
+
 
 </RelativeLayout>
