Framework for ListActivity
Basic working listView with dummy data function added. Also data
structure has been modified at this commit.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,6 +101,12 @@
                 android:layout_alignParentStart="true"
                 android:text="@string/insert_dummy_eventtype_data"
                 />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button_insert_dummy_event"
+                android:text="@string/insert_dummy_event"
+                />
         </LinearLayout>
 
     </HorizontalScrollView>
