--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,10 +26,10 @@
         android:id="@+id/imageView"
         android:layout_width="200dp"
         android:layout_height="150dp"
-        app:srcCompat="@drawable/welcome_title"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="39dp" />
+        android:layout_marginTop="39dp"
+        app:srcCompat="@drawable/welcome_title" />
 
     <Button
         android:id="@+id/plan_workout"
@@ -40,24 +40,12 @@
         android:layout_marginTop="48dp"
         android:text="@string/plan_workout" />
 
-    <TextView
-        android:id="@+id/dev_options_hint_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/horizontalScrollView"
-        android:layout_centerHorizontal="true"
-        android:fontFamily="sans-serif-smallcaps"
-        android:text="@string/developer_options"
-        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        android:textSize="14sp" />
-
 
     <!--Horizontally scroll down below to make use of the dev options-->
-    <HorizontalScrollView
+    <GridView
+        android:id="@+id/horizontalScrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/horizontalScrollView">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -68,49 +56,37 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/delete_dummy_data"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+
+                />
 
             <Button
                 android:id="@+id/insert_dummy_calendar_data"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/insert_dummy_calendar_data"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+                android:text="@string/insert_dummy_calendar_data" />
 
 
             <Button
                 android:id="@+id/view_tables_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/view_tables"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                />
+                android:text="@string/view_tables" />
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/button_insert_dummy_eventType"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:text="@string/insert_dummy_eventtype_data"
-                />
-            <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+
+                android:text="@string/insert_dummy_eventtype_data" />
+
+            <Button
                 android:id="@+id/button_insert_dummy_event"
-                android:text="@string/insert_dummy_event"
-                />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/insert_dummy_event" />
         </LinearLayout>
 
-    </HorizontalScrollView>
-
+    </GridView>
 
 
 </RelativeLayout>
