--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,51 +42,68 @@
 
 
     <!--Horizontally scroll down below to make use of the dev options-->
-    <GridView
-        android:id="@+id/horizontalScrollView"
+    <ScrollView
+        android:id="@+id/dev_scrollview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/plan_workout"
+        android:layout_marginTop="20dp"
+        android:background="@color/white_pressed">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:id="@+id/button_delete_dummy"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/delete_dummy_data"
-
-                />
-
-            <Button
-                android:id="@+id/insert_dummy_calendar_data"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/insert_dummy_calendar_data" />
-
+        <GridLayout
+            android:id="@+id/dev_gridview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/plan_workout"
+            android:layout_gravity="center"
+            android:columnCount="1">
 
             <Button
                 android:id="@+id/view_tables_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="@string/view_tables" />
 
             <Button
-                android:id="@+id/button_insert_dummy_eventType"
+                android:id="@+id/button_calendar_delete_dummy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/delete_dummy_data" />
+
+            <Button
+                android:id="@+id/button_calendar_insert_dummy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/insert_dummy_calendar_data" />
+
+
+            <Button
+                android:id="@+id/button_insert_eventtype"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
 
                 android:text="@string/insert_dummy_eventtype_data" />
 
             <Button
-                android:id="@+id/button_insert_dummy_event"
+                android:id="@+id/button_insert_event"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="@string/insert_dummy_event" />
-        </LinearLayout>
 
-    </GridView>
+        </GridLayout>
+
+    </ScrollView>
 
 
 </RelativeLayout>
