System checks if today's date is there, inserts if not.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,6 @@
         android:layout_alignRight="@+id/imageView"
         android:layout_alignStart="@+id/imageView"
         android:layout_below="@+id/imageView"
-        android:layout_marginTop="37dp"
         android:paddingBottom="20dp"
         android:paddingTop="20dp"
         android:text="@string/begin_workout" />
@@ -26,9 +25,7 @@
         android:id="@+id/imageView"
         android:layout_width="200dp"
         android:layout_height="150dp"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="39dp"
         app:srcCompat="@drawable/welcome_title" />
 
     <Button
@@ -62,7 +59,8 @@
             android:layout_alignParentStart="true"
             android:layout_below="@+id/plan_workout"
             android:layout_gravity="center"
-            android:columnCount="1">
+            android:columnCount="1"
+            android:useDefaultMargins="true">
 
             <Button
                 android:id="@+id/view_tables_button"
@@ -100,6 +98,13 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/insert_dummy_event" />
+
+            <Button
+                android:id="@+id/insert_calendar_today"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/insert_today_calendar" />
 
         </GridLayout>
 
