--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,8 @@
         android:layout_width="200dp"
         android:layout_height="150dp"
         android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/welcome_title" />
+        app:srcCompat="@drawable/welcome_title"
+        android:contentDescription="" />
 
     <Button
         android:id="@+id/plan_workout"
@@ -52,14 +53,12 @@
 
         <GridLayout
             android:id="@+id/dev_gridview"
+            style="@style/Animation.AppCompat.DropDownUp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/plan_workout"
-            android:layout_gravity="center"
             android:columnCount="1"
+            android:fadingEdge="horizontal"
+            android:scrollbars="vertical"
             android:useDefaultMargins="true">
 
             <Button
@@ -77,11 +76,12 @@
                 android:text="@string/delete_dummy_data" />
 
             <Button
-                android:id="@+id/button_calendar_insert_dummy"
+                android:id="@+id/button_remove_events"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/insert_dummy_calendar_data" />
+                android:text="@string/delete_all_events"
+                />
 
 
             <Button
