EditEventActivity gets correct eventID upon tapping on one of the ListItem

--- a/app/src/main/res/layout/activity_event_edit.xml
+++ b/app/src/main/res/layout/activity_event_edit.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="15dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/sample_workout_name" />
+        android:text="@android:string/untitled" />
 
     <Button
         android:id="@+id/delete_workout"
