--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,9 @@
         android:layout_width="200dp"
         android:layout_height="150dp"
         android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/welcome_title"
-        android:contentDescription="" />
+        android:layout_marginTop="20dp"
+        android:contentDescription=""
+        app:srcCompat="@drawable/welcome_title" />
 
     <Button
         android:id="@+id/plan_workout"
