--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#bc2d2d</color>
-    <color name="colorPrimaryDark">#B2000000</color>
+    <color name="colorPrimaryDark">#b2000000</color>
     <color name="colorAccent">#ffffff</color>
     <color name="color_gray">#ededed</color>
     <color name="black_semi_transparent">#B2000000</color>
@@ -13,4 +13,5 @@
     <color name="pink_pressed">#ec407a</color>
     <color name="blue_semi_transparent">#805677fc</color>
     <color name="blue_semi_transparent_pressed">#80738ffe</color>
+    <color name="colorPrimary_pressed">#b3ff3236</color>
 </resources>
