--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
@@ -7,16 +7,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listview_workout"
-        android:layout_below="@+id/temp_search_hint_text"
         android:layout_centerHorizontal="true" />
 
     <com.github.clans.fab.FloatingActionButton
         android:id="@+id/list_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
+        android:layout_gravity="bottom|right"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="17dp"
         android:layout_marginRight="17dp"
@@ -29,4 +26,22 @@
         fab:fab_colorPressed="@color/colorPrimary"
         fab:fab_colorRipple="@color/black_semi_transparent" />
 
-</RelativeLayout>
+    <!--<FrameLayout-->
+        <!--android:id="@+id/toolbar_container"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+
+        <!--<android.support.v7.widget.Toolbar-->
+            <!--android:id="@+id/toolbar"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="?attr/actionBarSize"-->
+            <!--android:background="@color/colorPrimary" />-->
+
+        <com.miguelcatalan.materialsearchview.MaterialSearchView
+            android:id="@+id/search_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="visible" />
+    <!--</FrameLayout>-->
+
+</FrameLayout>
