--- a/app/src/main/res/menu/menu_list.xml
+++ b/app/src/main/res/menu/menu_list.xml
@@ -6,8 +6,9 @@
     <item android:id="@+id/action_search_button"
         android:title="@string/search_events"
         android:icon="@drawable/ic_add_list"
-        app:showAsAction="always|collapseActionView"
-        app:actionViewClass="android.support.v7.widget.SearchView"/>
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        />
 
     <item
         android:title="@string/insert_event_values"
