--- a/app/src/main/res/menu/menu_list.xml
+++ b/app/src/main/res/menu/menu_list.xml
@@ -4,24 +4,25 @@
 
 
     <item android:id="@+id/action_search_button"
-        android:title="@string/search_events"
         android:icon="@drawable/ic_add_list"
-        app:showAsAction="ifRoom|collapseActionView"
-        app:actionViewClass="android.support.v7.widget.SearchView" />
+        android:orderInCategory="100"
+        android:title="@string/search_events"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="ifRoom" />
 
     <item
-        android:title="@string/insert_event_values"
         android:id="@+id/menu_insert_event"
+        android:title="@string/insert_event_values"
         app:showAsAction="never"
         />
 
-    <item android:title="@string/view_tables"
-        android:id="@+id/menu_view_tables"
+    <item android:id="@+id/menu_view_tables"
+        android:title="@string/view_tables"
         app:showAsAction="never" />
 
     <item
-        android:title="@string/delete_all_events"
         android:id="@+id/menu_delete_all_events"
+        android:title="@string/delete_all_events"
         app:showAsAction="never" />
 
 
