--- a/app/src/main/res/layout/item_single_listview.xml
+++ b/app/src/main/res/layout/item_single_listview.xml
@@ -9,10 +9,10 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="@dimen/list_marginTop"
         android:text="@string/sample_workout_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@color/colorPrimary"
         android:textSize="18sp" />
 
     <TextView
