--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="labels_text_size">14sp</dimen>
     <dimen name="list_marginTop">30dp</dimen>
     <dimen name="list_smalltxt_marginTop">33dp</dimen>
+    <dimen name="small_item_right_margin">10dp</dimen>
+    <dimen name="text_space">10dp</dimen>
+    <dimen name="small_margin_top">7dp</dimen>
+    <dimen name="list_set_and_rep_right_margin">50dp</dimen>
 </resources>
