--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="fab_size_normal">56dp</dimen>
     <dimen name="fab_size_mini">40dp</dimen>
     <dimen name="labels_text_size">14sp</dimen>
+    <dimen name="large_text_size">16sp</dimen>
     <dimen name="list_marginTop">30dp</dimen>
     <dimen name="list_smalltxt_marginTop">33dp</dimen>
     <dimen name="small_item_right_margin">10dp</dimen>
