--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,7 @@
     <dimen name="text_space">10dp</dimen>
     <dimen name="small_margin_top">7dp</dimen>
     <dimen name="list_set_and_rep_right_margin">50dp</dimen>
+    <dimen name="main_logo_width">200dp</dimen>
+    <dimen name="main_logo_height">150dp</dimen>
+    <dimen name="main_logo_marginTop">20dp</dimen>
 </resources>
