EditEventActivity layout improvements

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,5 @@
     <dimen name="numberPIcer_marginTop">15dp</dimen>
     <dimen name="edit_set_hint_margintop">15dp</dimen>
     <dimen name="edit_set_hint_marginLeft">30dp</dimen>
+    <dimen name="add_event_margin_right">10dp</dimen>
 </resources>
