--- a/app/src/main/res/layout/activity_event_edit.xml
+++ b/app/src/main/res/layout/activity_event_edit.xml
@@ -16,7 +16,7 @@
 
     <TextView
         android:id="@+id/edit_workout_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -28,7 +28,7 @@
         android:text="@android:string/untitled"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="18sp"
-        android:textStyle="bold" />
+        />
 
     <Button
         android:id="@+id/delete_workout"
@@ -80,9 +80,9 @@
         android:id="@+id/add_event"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/input_weight_number"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/input_weight_number"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="@dimen/add_event_margin_right"
         android:text="@string/add_event" />
 
     <EditText
@@ -92,8 +92,17 @@
         android:text="@string/hint_text_weight"
         android:inputType="numberDecimal"
         android:layout_above="@id/add_event"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="114dp"
         android:layout_alignParentRight="true"
         />
+
+    <TextView
+        android:id="@+id/weight_hint_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/input_weight_number"
+        android:layout_alignLeft="@id/input_weight_number"
+        android:layout_alignStart="@id/input_weight_number"
+        android:text="@string/weight" />
 
 </RelativeLayout>
