--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/container_fragment_main"
     tools:context="etchee.com.weightlifty.Activity.MainActivity">
 
-    <!--ImageView to hold the pretty icon for the app-->
-    <ImageView
-        android:id="@+id/main_logo_view"
-        android:layout_width="@dimen/main_logo_width"
-        android:layout_height="@dimen/main_logo_height"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/main_logo_marginTop"
-        app:srcCompat="@drawable/welcome_title" />
-
-    <!--Button to begin workout-->
-    <Button
-        android:id="@+id/begin_workout_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:paddingRight="10dp"
-        android:layout_marginTop="@dimen/list_marginTop"
-        android:layout_below="@+id/main_logo_view"
-        android:paddingBottom="20dp"
-        android:paddingTop="20dp"
-        android:text="@string/begin_workout" />
-
-
-</RelativeLayout>
+</FrameLayout>
