--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -29,5 +29,9 @@
     <item android:title="@string/test_eventtype_db"
         android:id="@+id/test_eventType_db"
         app:showAsAction="never" />
+    <item android:title="@string/settings"
+        android:id="@+id/menu_settings"
+        app:showAsAction="never"
+        />
 
 </menu>
