--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#bc2d2d</color>
     <color name="colorPrimaryDark">#b2000000</color>
-    <color name="colorAccent">#ffffff</color>
+    <color name="colorAccent">#9b9b9b</color>
     <color name="color_gray">#ededed</color>
     <color name="black_semi_transparent">#B2000000</color>
     <color name="background">#e5e5e5</color>
