Like halfway thru fragmenting the LIstActivity

--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -19,7 +19,7 @@
         android:layout_centerHorizontal="true" />
 
     <com.github.clans.fab.FloatingActionButton
-        android:id="@+id/list_fab"
+        android:id="@+id/listactivity_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
