--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="?android:actionBarSize"
         android:background="@color/colorPrimary"
+        app:layout_scrollFlags="scroll|enterAlways"
         android:elevation="4dp" />
 
     <FrameLayout
