ViewPager basis for WorkoutListActivity (with three of exactly the same fragments)

--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -16,8 +16,8 @@
             android:background="@color/colorPrimary"
             android:elevation="4dp" />
 
-        <LinearLayout
-            android:id="@+id/container_fragment_listActivity"
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager_fragment_listActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" />
