--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -16,6 +16,16 @@
             android:background="@color/colorPrimary"
             android:elevation="4dp" />
 
+        <android.support.design.widget.TabLayout
+            android:id="@+id/list_tab"
+            fab:tabMode="scrollable"
+            android:layout_gravity="fill"
+            fab:tabIndicatorColor="@color/colorPrimary_pressed"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </android.support.design.widget.TabLayout>
+
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager_fragment_listActivity"
             android:layout_width="match_parent"
